🛠️ : – Fix exclude filtering heredoc failure

--- a/.github/workflows/close-my-open-prs.yml
+++ b/.github/workflows/close-my-open-prs.yml
@@ -135,15 +135,10 @@ jobs:
             if [ "$EXCLUDE_COUNT" -gt 0 ]; then
               echo "Excluding $EXCLUDE_COUNT PR URL(s):"
               jq -r '.[]' exclude.json
-              node <<'NODE'
-                const { readFileSync, writeFileSync } = require('node:fs');
-
-                const prs = JSON.parse(readFileSync('prs.json', 'utf8'));
-                const exclude = new Set(JSON.parse(readFileSync('exclude.json', 'utf8')));
-                const filtered = prs.filter(pr => !exclude.has(pr.url));
-
-                writeFileSync('prs.json', JSON.stringify(filtered));
-              NODE
+              jq --slurpfile exclude exclude.json '
+                map(select(.url as $url | ($exclude[0] | index($url)) | not))
+              ' prs.json > filtered.json
+              mv filtered.json prs.json
             fi
           fi
 
