--- a/.github/workflows/close-my-open-prs.yml
+++ b/.github/workflows/close-my-open-prs.yml
@@ -1,4 +1,5 @@
 name: Close my open PRs
+
 on:
   workflow_dispatch:
     inputs:
@@ -34,22 +35,25 @@ on:
         description: "PR URLs to skip (space/comma/newline separated, optional)"
         type: string
         default: ""
+
 permissions:
   contents: read
   pull-requests: write
+  issues: write
+
 jobs:
   reap:
     runs-on: ubuntu-latest
-    # Prefer a user PAT if provided. If PR_REAPER_TOKEN is not set, gh will likely use GITHUB_TOKEN (repo-scoped) or be unauthenticated.
+    # Prefer a user PAT if provided; otherwise fall back to the repo-scoped GITHUB_TOKEN.
     env:
-      GH_TOKEN: ${{ secrets.PR_REAPER_TOKEN != '' && secrets.PR_REAPER_TOKEN || github.token }}
+      GH_TOKEN: ${{ secrets.PR_REAPER_TOKEN != '' && secrets.PR_REAPER_TOKEN || secrets.GITHUB_TOKEN }}
+
     steps:
       - name: Show auth identity
         run: |
           set -euo pipefail
           echo "gh version:"; gh --version | head -n1 || true
           echo "gh auth status:"; gh auth status || true
-
           echo "gh api user (login):"
           LOGIN="$(gh api user --jq .login 2>/dev/null || true)"
           echo "${LOGIN:-"(none)"}"
@@ -59,7 +63,7 @@ jobs:
             exit 1
           fi
           if [ -z "${LOGIN:-}" ]; then
-            echo "::error::gh is unauthenticated; check PR_REAPER_TOKEN."
+            echo "::error::gh is unauthenticated; check PR_REAPER_TOKEN or GITHUB_TOKEN permissions."
             exit 1
           fi
 
@@ -67,18 +71,15 @@ jobs:
           RAW_HEADERS="$(gh api -i user 2>/dev/null | tr -d '\r' || true)"
           SCOPES="$(awk 'BEGIN{IGNORECASE=1} /^x-oauth-scopes:/ {sub(/^x-oauth-scopes:[[:space:]]*/,""); print}' \
             <<< "$RAW_HEADERS")"
-
           # Fallback: parse scopes from `gh auth status` if header isn’t present.
           if [ -z "${SCOPES:-}" ]; then
             SCOPES="$(gh auth status 2>/dev/null | sed -n 's/.*Token scopes: \(.*\)$/\1/p' | tr -d ,)"
           fi
           SCOPES_TRIM="$(echo "${SCOPES:-}" | xargs || true)"
           echo "token scopes (best-effort): ${SCOPES_TRIM:-"(unknown)"}"
-
           has_repo=0; has_readorg=0
           grep -Eiq '(^|[[:space:],])repo([[:space:],]|$)' <<< "${SCOPES_TRIM:-}" && has_repo=1 || true
           grep -Eiq '(^|[[:space:],])read:org([[:space:],]|$)' <<< "${SCOPES_TRIM:-}" && has_readorg=1 || true
-
           ORG_INPUT="${{ github.event.inputs.org }}"
           if [ "$has_repo" -ne 1 ]; then
             echo "::error::GH_TOKEN lacks 'repo' scope; add PR_REAPER_TOKEN with repo scope."
@@ -91,10 +92,12 @@ jobs:
           if [ "$has_readorg" -ne 1 ]; then
             echo "::warning::Could not verify 'read:org'; org PRs may be skipped."
           fi
+
       - name: Search PRs
         # Use gh search prs to match results from GitHub UI.
         id: search
         run: |
+          set -euo pipefail
           LIMIT_INPUT="${{ github.event.inputs.limit }}"
           if [ -z "$LIMIT_INPUT" ]; then
             LIMIT_INPUT="1000"
@@ -115,9 +118,10 @@ jobs:
           if [ -z "$AUTHOR" ]; then
             AUTHOR="${{ github.actor }}"
           fi
+
           CMD=(gh search prs --author "$AUTHOR" --state open \
-            --limit "$LIMIT" \
-            --json number,repository,title,url)
+               --limit "$LIMIT" \
+               --json number,repository,title,url)
           if [ -n "${{ github.event.inputs.org }}" ]; then
             CMD+=(--owner "${{ github.event.inputs.org }}")
           fi
@@ -130,14 +134,13 @@ jobs:
           EXCLUDE_INPUT="${{ github.event.inputs.exclude_urls }}"
           if [ -n "$EXCLUDE_INPUT" ]; then
             printf '%s\n' "$EXCLUDE_INPUT" | python3 - <<'PY' > exclude.json
-import json
-import re
-import sys
-
-data = sys.stdin.read().replace('\r', '\n')
-parts = [part.strip() for part in re.split(r'[\s,;|]+', data) if part.strip()]
-json.dump(parts, sys.stdout)
-PY
+          import json
+          import re
+          import sys
+          data = sys.stdin.read().replace('\r', '\n')
+          parts = [part.strip() for part in re.split(r'[\s,;|]+', data) if part.strip()]
+          json.dump(parts, sys.stdout)
+          PY
             EXCLUDE_COUNT=$(jq 'length' exclude.json)
             if [ "$EXCLUDE_COUNT" -gt 0 ]; then
               echo "Excluding $EXCLUDE_COUNT PR URL(s):"
@@ -150,9 +153,9 @@ PY
           fi
 
           COUNT=$(jq 'length' prs.json)
-          rm -f exclude.json filtered.json
+          rm -f exclude.json filtered.json || true
           echo "Found $COUNT PR(s)"
-          echo "count=$COUNT" >> $GITHUB_OUTPUT
+          echo "count=$COUNT" >> "$GITHUB_OUTPUT"
 
       - name: Write summary
         run: |
@@ -167,7 +170,7 @@ PY
               echo ""
               jq -r '
                 .[] |
-                "- [\(.title)](\(.url))  (\(.repository.nameWithOwner)#\(.number))"
+                "- [\(.title)](\(.url)) (\(.repository.nameWithOwner)#\(.number))"
               ' prs.json
             fi
           } >> "$GITHUB_STEP_SUMMARY"
@@ -180,6 +183,7 @@ PY
       - name: Close PRs
         if: ${{ github.event.inputs.dry_run != 'true' && steps.search.outputs.count != '0' }}
         run: |
+          set -euo pipefail
           TOTAL="${{ steps.search.outputs.count }}"
           DELETE_FLAG=""
           if [ "${{ github.event.inputs.delete_branch }}" = "true" ]; then
