--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "lint": "tsc -p tsconfig.json --noEmit",
-    "test": "npm run build && node --test",
-    "test:ci": "npm run build && node --test"
+    "test": "npm run build && node --test --test-concurrency=1",
+    "test:ci": "npm run build && node --test --test-concurrency=1"
   },
   "dependencies": {
     "@actions/artifact": "^2.1.7",
