--- a/.github/workflows/close-my-open-prs.yml
+++ b/.github/workflows/close-my-open-prs.yml
@@ -44,7 +44,7 @@ jobs:
   reap:
     runs-on: ubuntu-latest
     env:
-        GH_TOKEN: ${{ secrets.PR_REAPER_TOKEN != '' && secrets.PR_REAPER_TOKEN || github.token }}
+      GH_TOKEN: ${{ secrets.PR_REAPER_TOKEN != '' && secrets.PR_REAPER_TOKEN || github.token }}
 
     steps:
       - name: Show auth identity
@@ -104,123 +104,14 @@ jobs:
             echo "::warning::Could not verify 'read:org'; org PRs may be skipped."
           fi
 
-      - name: Search PRs
-        id: search
-        run: |
-          set -euo pipefail
-
-          LIMIT_INPUT="${{ inputs.limit }}"
-          if [ -z "$LIMIT_INPUT" ]; then
-            LIMIT_INPUT="1000"
-          fi
-
-          case "$LIMIT_INPUT" in
-            ''|*[!0-9]*)
-              echo "::error::limit must be an integer between 1 and 1000"
-              exit 1
-              ;;
-          esac
-
-          if [ "$LIMIT_INPUT" -lt 1 ] || [ "$LIMIT_INPUT" -gt 1000 ]; then
-            echo "::error::limit must be an integer between 1 and 1000"
-            exit 1
-          fi
-
-          LIMIT="$LIMIT_INPUT"
-
-          AUTHOR="${{ inputs.author }}"
-          if [ -z "$AUTHOR" ]; then
-            AUTHOR="${{ github.actor }}"
-          fi
-
-          CMD=(gh search prs --author "$AUTHOR" --state open \
-            --limit "$LIMIT" \
-            --json "number,repository,title,url")
-
-          if [ -n "${{ inputs.org }}" ]; then
-            CMD+=(--owner "${{ inputs.org }}")
-          fi
-
-          if [ -n "${{ inputs.title_filter }}" ]; then
-            CMD+=(--search "${{ inputs.title_filter }}" --match title)
-          fi
-
-          echo "Search command: ${CMD[*]}"
-          "${CMD[@]}" | tee prs.json
-
-          EXCLUDE_INPUT="${{ inputs.exclude_urls }}"
-          if [ -n "$EXCLUDE_INPUT" ]; then
-            printf '%s\n' "$EXCLUDE_INPUT" \
-              | python3 -c 'import json, re, sys; data = sys.stdin.read().replace("\r", "\n"); ' \
-                'parts = [p.strip() for p in re.split(r"[\s,;|]+", data) if p.strip()]; ' \
-                'json.dump(parts, sys.stdout)' \
-              > exclude.json
-            EXCLUDE_COUNT=$(jq 'length' exclude.json)
-            if [ "$EXCLUDE_COUNT" -gt 0 ]; then
-              echo "Excluding $EXCLUDE_COUNT PR URL(s):"
-              jq -r '.[]' exclude.json
-              jq --slurpfile exclude exclude.json '
-                map(select(.url as $url | ($exclude[0] | index($url)) | not))
-              ' prs.json > filtered.json
-              mv filtered.json prs.json
-            fi
-          fi
-
-          COUNT=$(jq 'length' prs.json)
-          rm -f exclude.json filtered.json || true
-          echo "Found $COUNT PR(s)"
-          echo "count=$COUNT" >> "$GITHUB_OUTPUT"
-
-      - name: Write summary
-        run: |
-          COUNT="${{ steps.search.outputs.count }}"
-
-          {
-            echo "## pr-reaper summary"
-            echo
-            if [ "$COUNT" = "0" ]; then
-              echo "No open PRs found."
-            else
-              echo "Found **$COUNT** open PR(s):"
-              echo
-              jq -r '
-                .[] |
-                "- [\(.title)](\(.url)) (\(.repository.nameWithOwner)#\(.number))"
-              ' prs.json
-            fi
-          } >> "$GITHUB_STEP_SUMMARY"
-
-      - name: Dry-run listing
-        if: ${{ inputs.dry_run }}
-        run: |
-          jq -r '.[] | "\(.url) - \(.title)"' prs.json
-
-      - name: Close PRs
-        if: ${{ !inputs.dry_run && steps.search.outputs.count != '0' }}
-        run: |
-          set -euo pipefail
-
-          TOTAL="${{ steps.search.outputs.count }}"
-          DELETE_FLAG=""
-
-          if [ "${{ inputs.delete_branch }}" = 'true' ]; then
-            DELETE_FLAG="--delete-branch"
-          fi
-
-          COMMENT="${{ inputs.comment }}"
-          INDEX=1
-
-          while IFS=$'\t' read -r NUM REPO; do
-            PCT=$(awk -v i="$INDEX" -v total="$TOTAL" 'BEGIN { printf "%.1f", (i / total) * 100 }')
-            echo "[${INDEX}/${TOTAL} - ${PCT}%] Closing ${REPO}#${NUM}"
-
-            CMD=(gh pr close "$NUM" --repo "$REPO" --comment "$COMMENT")
-            if [ -n "$DELETE_FLAG" ]; then
-              CMD+=("$DELETE_FLAG")
-            fi
-
-            echo "${CMD[*]}"
-            "${CMD[@]}"
-
-            INDEX=$((INDEX + 1))
-          done < <(jq -r '.[] | "\(.number)\t\(.repository.nameWithOwner)"' prs.json)
+      - name: Run pr-reaper action
+        uses: ./
+        with:
+          dry_run: ${{ inputs.dry_run }}
+          author: ${{ inputs.author }}
+          org: ${{ inputs.org }}
+          title_filter: ${{ inputs.title_filter }}
+          delete_branch: ${{ inputs.delete_branch }}
+          limit: ${{ inputs.limit }}
+          comment: ${{ inputs.comment }}
+          exclude_urls: ${{ inputs.exclude_urls }}
